--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -59,3 +59,10 @@ typings/
 
 # next.js build output
 .next
+
+# images
+
+uploads/*.jpg
+uploads/*.png
+uploads/resized/*.jpg
+uploads/resized/*.png
